[gd_scene load_steps=3 format=3 uid="uid://hcad14f7py6i"]

[ext_resource type="Script" path="res://scripts/ui/menu_ui.gd" id="1_ksbxq"]
[ext_resource type="Theme" uid="uid://doy1wmiu17ppq" path="res://themes/main_menu_theme.tres" id="2_muwpp"]

[node name="Main_Menu" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_ksbxq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 395
theme_override_constants/margin_bottom = 325

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Singleplayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_muwpp")
text = "Singleplayer"

[node name="Hotseat" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_muwpp")
theme_override_font_sizes/font_size = 90
text = "Multiplayer"

[node name="Quit" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -229.0
offset_top = -154.0
offset_right = -20.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_muwpp")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Hotseat" to="." method="_on_hotseat_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
